# fuel-risc0-prover

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Cargo_1RAM.toml  Cargo_64RAM.toml  Forc.toml  Makefile  NOTES.md  README.md  docker-compose.yml  docker.hardhat.deploy.Dockerfile  docker.hardhat.node.Dockerfile  fuel-toolchain.toml  hardhat.config.ts  package.json  tsconfig.json
.cargo/: config.toml
core/: Cargo.toml
core/res/: test_snapshot.json  test_transaction.json
core/src/: config.rs  database.rs  executor.rs  fuel_core_database.rs  fuel_core_storage.rs  genesis.rs  lib.rs  primitives.rs  serialization.rs  state.rs  vm_database.rs
core/src/config/: chain.rs  coin.rs  consensus.rs  contract.rs  message.rs  state.rs
core/src/database/: balances.rs  coin.rs  contracts.rs  execution.rs  metadata.rs  state.rs  storage.rs  transaction.rs  vm_database.rs
core/src/executor/: config.rs  ports.rs  refs.rs
core/src/executor/refs/: contract.rs
deploy/anvil/: 000.ens.ts  001.bonsai.ts
deploy/hardhat/: 000.mining.ts
deploy/local/: 001.bonsai.ts
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
relay/: Cargo.toml
relay/src/: main.rs  types.rs
res/: snapshot.json
tasks/: deployBonsai.ts  index.ts
test/: Cargo.toml
test/contracts/wallet/src/: wallet.sw
test/res/: test_snapshot.json  test_target_block.json  test_transaction.json
test/src/: helpers.rs  lib.rs  main.rs
test/src/helpers/: bootstrap_node.rs  constants.rs  database.rs  deploy.rs  snapshot.rs  transactions.rs
