[workspace]
members = [
    "host",
    # "relay", # Temporarily disabled
    "methods/guest",
    "core",
    "test"
]
#default-members = ["host", "relay"]
default-members = ["host"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
bech32 = "0.9.0"
bonsai-sdk = { git = "https://github.com/risc0/risc0", rev = "1742ef8098d246871055501a0559811c9a8fece4" }
bonsai-ethereum-relay = { git = "https://github.com/risc0/risc0", rev = "1742ef8098d246871055501a0559811c9a8fece4" }
derive_more = { version = "0.99" }
enum-iterator = "1.2"
ethers = {version = "=2.0.8"}
ethabi = "18.0.0"
fuel-core = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-chain-config = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-database = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-executor = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-importer = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-poa = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-services = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-storage = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-types = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-core-txpool = { git = "https://github.com/DefiCake/fuel-core", rev="88ede4261047d771b279665dde3811adb09f8bcf", default-features = false }
fuel-crypto = { version = "0.43.1",  default-features = false}
fuel-storage = { version = "0.43.1",  default-features = false}
fuel-tx = { version = "0.43.1", default-features = false, features = ["builder"]}
fuel-types = { version = "0.43.1",  default-features = false}
fuel-vm = { version = "0.43.1",  default-features = false, features = ["serde", "alloc"]}
hex = "0.4.3"
itertools = "0.10"
primitive-types = "0.12"
risc0-build = { git = "https://github.com/risc0/risc0", rev = "1742ef8098d246871055501a0559811c9a8fece4" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "1742ef8098d246871055501a0559811c9a8fece4", default-features = false }
methods = { path = "./methods", package = "methods" }
parking_lot = "0.12"
postcard = "1.0"
prover-core = { path = "./core" }
serde = {version = "1.0.188", default-features = false}
serde_json = "1.0.104"
serde_with = "1.11"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full", "sync"] }

[patch.crates-io]
fuel-crypto = { git = "https://github.com/DefiCake/fuel-vm", rev = "917ea7c38e5dc34e735295a7e47af3308011be26" }
fuel-storage = { git = "https://github.com/DefiCake/fuel-vm", rev = "917ea7c38e5dc34e735295a7e47af3308011be26" }
fuel-tx = { git = "https://github.com/DefiCake/fuel-vm", rev = "917ea7c38e5dc34e735295a7e47af3308011be26" }
fuel-types = { git = "https://github.com/DefiCake/fuel-vm", rev = "917ea7c38e5dc34e735295a7e47af3308011be26" }
fuel-vm = { git = "https://github.com/DefiCake/fuel-vm", rev = "917ea7c38e5dc34e735295a7e47af3308011be26" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
