[package]
name = "prover-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
enum-iterator = { workspace = true }
fuel-crypto = { workspace = true }
fuel-storage = { workspace = true }
fuel-tx = { workspace = true }
fuel-types = { workspace = true }
fuel-vm = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }