[package]
name = "prover-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bech32 = { workspace = true }
derive_more = { workspace = true }
enum-iterator = { workspace = true }
fuel-core-chain-config = { workspace = true }
fuel-core-database = { workspace = true }
fuel-core-executor = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
fuel-core-txpool = { workspace = true }
fuel-crypto = { workspace = true }
fuel-storage = { workspace = true }
fuel-tx = { workspace = true }
fuel-types = { workspace = true }
fuel-vm = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
postcard = { workspace = true, features = ["use-std", "alloc"] }
primitive-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }