[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
bonsai-ethereum-relay = { workspace = true }
bonsai-sdk = {workspace = true}
bytemuck = "1.13.1"
ethabi = { workspace = true }
methods = { workspace = true }
anyhow = "1.0"
clap = { version = "=4.3.21", default-features = false, features = ["std", "derive"] }
ethers = {workspace = true}
hex = {workspace = true}
serde = {workspace = true, default-features = false}
serde_json = {workspace = true}
risc0-build = { workspace = true, features = ["guest-list"] }
risc0-zkvm = { workspace = true, default-features = false, features = ["metal"] }
tokio = { version = "1.19", features = ["full", "sync"] }