[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
fuels={version = "0.54.0", features=["std", "fuel-core-lib"]}
fuel-core = { workspace = true, features = ["relayer", "rocksdb"] }
fuel-core-executor = { workspace = true, features = ["test-helpers"] }
fuel-types = { workspace = true, default-features = false }
fuel-crypto = { workspace = true }
prover-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }