[package]
name = "x509"
version = "0.1.0"
edition = "2021"

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
ethabi = {workspace = true}
json = "0.12"
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "da5bc39089c6dba8b03510837f1c7363ed3cc8b7", default-features = false, features = ["std"] }
sha2 = "0.10.7"
hex = { workspace = true }
prover-core = { workspace = true }