[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
ethabi = {workspace = true}
json = "0.12"
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-0.18", default-features = false, features = ["std"] }
sha2 = { workspace = true }
hex = { workspace = true }
prover-core = { workspace = true }